fix(component): fixed SpecialMealCard image shifting and other bugs

--- a/src/components/atoms/specialMealCard/SpecialMealCard.module.scss
+++ b/src/components/atoms/specialMealCard/SpecialMealCard.module.scss
@@ -1,16 +1,17 @@
+@use "sass:map";
 @import "../../../foundations/sass/all";
 
 .card {
   border-radius: $br-md;
-  color: $special-meal-card-text-color;
+  color: $special-meal-card-color;
   height: px-to-rem(180);
   text-align: center;
   transition: all 300ms ease;
   width: px-to-rem(180);
 
   &:hover {
-    background-color: $special-meal-card-text-color;
-    color: $special-meal-card-text-color-hover;
+    background-color: $special-meal-card-color;
+    color: $special-meal-card-color-hover;
   }
 
   &__box {
@@ -18,17 +19,20 @@
 
     flex-direction: column;
     height: 100%;
-    justify-content: space-around;
+    justify-content: flex-start;
+    overflow: hidden;
 
     &__img {
       border-radius: $br-sm;
       height: px-to-rem(86);
+      margin-top: map.get($spacing, "sm");
       width: px-to-rem(108.3);
-
-      @include margin-bottom(sm);
     }
 
     &__title {
+      @include center;
+
+      flex-grow: 1;
       font-size: $fs-xl;
       font-weight: $fw-normal;
       line-height: px-to-rem(29.3);
